# stitches

./: .gitignore  README.md  codec-list.sh  meson.build  org.codenomad.stitches.json  pyproject.toml  python-deps.json  update_python_deps.sh
data/: meson.build  org.codenomad.stitches.desktop.in  org.codenomad.stitches.gschema.xml  org.codenomad.stitches.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: common.py  constants.py  main.py  meson.build  stitches.gresource.xml  stitches.in
src/model/: stitch_model.py
src/view/: listitem.blp  main.blp  preferences.blp  preferences.py  stitch_content.blp  stitch_content.py  window.blp  window.blp.bak  window.py
